Error handling added. Some refactoring.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
 
         <service
-                android:name=".model.MusicPlayerService"
+                android:name=".model.media.MusicPlayerService"
                 android:exported="false"/>
 
     </application>
